0.4.0/src/docs/dsl/dev.nokee.language.nativebase.tasks.NativeSourceCompile.adoc
:toc:
:toclevels: 1
:toc-title: Contents
:icons: font
:idprefix:
:jbake-status: published
:encoding: utf-8
:lang: en-US
:sectanchors: true
:sectlinks: true
:linkattrs: true
= NativeSourceCompile
:jbake-type: dsl_chapter
:jbake-tags: user manual, gradle plugin dsl, NativeSourceCompile
:jbake-description: Learn about the build language of the NativeSourceCompile type.
:jbake-category: Native types

API Documentation: link:../javadoc/dev/nokee/language/nativebase/tasks/NativeSourceCompile.html[NativeSourceCompile]

Compiles native source files into object files.



== Properties



[cols="1,2", options="header", width=100%]
|===
|Property
|Description


|link:#dev.nokee.language.nativebase.tasks.NativeSourceCompile:compilerArgs[compilerArgs]
|Additional arguments to provide to the compiler.

It act as an escape hatch to the current model.
Please open an issue on https://github.com/nokeedev/gradle-native with your reason for using this hatch so we can improve the model.

|link:#dev.nokee.language.nativebase.tasks.NativeSourceCompile:headerSearchPaths[headerSearchPaths]
|The header search paths used during the compilation.

|link:#dev.nokee.language.nativebase.tasks.NativeSourceCompile:toolChain[toolChain]
|The tool chain used for the compilation.

|===




== Methods

No methods.




== Property Details


[[dev.nokee.language.nativebase.tasks.NativeSourceCompile:compilerArgs]]
=== link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/ListProperty.html[ListProperty]<link:https://docs.oracle.com/javase/8/docs/api/java/lang/String.html[String]> compilerArgs 

*Additional* arguments to provide to the compiler.

It act as an escape hatch to the current model.
Please open an issue on https://github.com/nokeedev/gradle-native with your reason for using this hatch so we can improve the model.



[[dev.nokee.language.nativebase.tasks.NativeSourceCompile:headerSearchPaths]]
=== link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider]<link:https://docs.oracle.com/javase/8/docs/api/java/util/Set.html[Set]<link:../javadoc/dev/nokee/language/nativebase/HeaderSearchPath.html[HeaderSearchPath]>> headerSearchPaths (read-only)

The header search paths used during the compilation.



[[dev.nokee.language.nativebase.tasks.NativeSourceCompile:toolChain]]
=== link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider]<? extends link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/nativeplatform/toolchain/NativeToolChain.html[NativeToolChain]> toolChain (read-only)

The tool chain used for the compilation.









